# noir-rlwe-gadgets

./: .gitignore  BENCHMARKS.md  CLAUDE.md  LICENSE-APACHE  LICENSE-MIT  README.md
bench/circuit/: Nargo.toml  Prover_bad_c0.toml  Prover_bad_e.toml  Prover_bad_s.toml
bench/circuit/evm/: Verifier.sol  VerifierOpt.sol
bench/circuit/proof_out/: proof  public_inputs  vk  vk_hash
bench/circuit/src/: main.nr
bench/circuit512/: Nargo.toml  Prover.toml  Verifier.toml
bench/circuit512/evm/: Verifier.sol
bench/circuit512/src/: main.nr
bench/circuit_digest/: Nargo.toml  Prover.toml  Verifier.toml
bench/circuit_digest/evm/: Verifier.sol
bench/circuit_digest_1024/: Nargo.toml  Verifier.toml
bench/circuit_digest_2048/: Nargo.toml  Prover.toml  Verifier.toml
bench/circuit_digest_4096/: Nargo.toml  Prover.toml  Verifier.toml
bench/circuit_digest_512/: Nargo.toml  Prover.toml  Verifier.toml
bench/circuit_packed/: Nargo.toml  Prover.toml
bench/horner/: Nargo.toml
bench/pk_digest_1024/: Nargo.toml  Prover.toml  Verifier.toml
bench/pk_digest_512/: Nargo.toml  Prover.toml
bench/product/: Nargo.toml
bench/product_core/: Nargo.toml
docs/: api.md  benchmarks.md  completeness.md  concepts.md  end_to_end.md  no_wraparound.md  parameter_security.md  proof_system_composition.md  security.md
noir-rlwe/: Nargo.toml  README.md
noir-rlwe/src/: lib.nr  pack.nr  util.nr
tools/: bfv_witness_gen.py  completeness_check.py  decrypt_validation.py  no_wraparound_check.py
witness-gen/: Cargo.toml  README.md  Verifier.toml
witness-gen/src/: main.rs
(+47 files in other folders)
